--- a/style.css
+++ b/style.css
@@ -1,9 +1,40 @@
+
 body {
   font-size: 16px;
+  font-family: Arial, sans-serif;
+  background-color: #eee;
+  margin: 0;
+  padding: 0;
 }
 
-.player {
-  background-color: white;
+.menu {
+  position: fixed;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
+  background-color: #333;
+  color: #fff;
+  padding: 0 1em;
+  margin: 0;
+  font-size: .8em;
+}
+.menu li {
+  list-style: none;
+  margin: 0;
+  padding: .3em;
+  float: left;
+}
+
+.entity.player {
   color: black;
-  font-size: 1em;
+  font-size: 1.2em;
+  z-index: 100;
+  text-shadow: 0px 0px 1px rgba(150, 150, 150, 1);
+}
+
+.entity.snowflake {
+  color: white;
+  text-shadow: 0px 0px 1px rgba(150, 150, 150, 1);
+  font-size: .8em;
+  z-index: 90;
 }
