--- a/style.css
+++ b/style.css
@@ -6,23 +6,41 @@ body {
   margin: 0;
   padding: 0;
 }
-
-.menu {
-  position: fixed;
-  left: 0px;
-  bottom: 0px;
-  width: 100%;
-  background-color: #333;
-  color: #fff;
+ul {
   padding: 0 1em;
   margin: 0;
   font-size: .8em;
 }
-.menu li {
+ul li {
   list-style: none;
   margin: 0;
   padding: .3em;
   float: left;
+}
+a {
+  color: #333;
+}
+a:hover {
+  text-decoration: none;
+}
+
+#menu {
+  position: fixed;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: 2em;
+  color: #fff;
+  background-color: #333;
+}
+
+#store {
+  position: fixed;
+  left: 0px;
+  bottom: 2em;
+  width: 100%;
+  height: 2em;
+  background-color: rgba(150, 150, 150, .75);
 }
 
 .entity.player {
@@ -31,7 +49,12 @@ body {
   z-index: 100;
   text-shadow: 0px 0px 1px rgba(150, 150, 150, 1);
 }
-
+.entity.store {
+  color: #333;
+  font-size: 1.5em;
+  z-index: 110;
+  text-shadow: 0px 0px 1px rgba(150, 150, 150, 1);
+}
 .entity.snowflake {
   color: white;
   text-shadow: 0px 0px 1px rgba(150, 150, 150, 1);
