--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   font-size: 16px;
   font-family: Arial, sans-serif;
-  background-color: #eee;
+  background-color: #CCC9C2;
   margin: 0;
   padding: 0;
 }
@@ -29,7 +29,7 @@ a:hover {
   left: 0px;
   bottom: 0px;
   width: 100%;
-  height: 2em;
+  height: 3em;
   color: #fff;
   background-color: #333;
 }
@@ -37,7 +37,7 @@ a:hover {
 #store {
   position: fixed;
   left: 0px;
-  bottom: 2em;
+  bottom: 3em;
   width: 100%;
   height: 2em;
   background-color: rgba(150, 150, 150, .75);
