--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ a:hover {
 }
 
 #store {
+  display: none;
   position: fixed;
   left: 0px;
   bottom: 3em;
@@ -42,6 +43,21 @@ a:hover {
   height: 2em;
   background-color: rgba(150, 150, 150, .75);
 }
+
+#fight {
+  display: none;
+  position: fixed;
+  left: 0px;
+  bottom: 3em;
+  width: 100%;
+  height: 2em;
+  background-color: rgba(150, 150, 150, .75);
+}
+.fight-enemy {
+  font-weight: bold;
+  cursor: pointer;
+}
+
 
 .entity.player {
   color: black;
